Fixes #34 - [CodeCamp] Background image does not resizes on mobile. Parallax eliminated from background image to be supported by iphones and ipads

--- a/_assets/css/_sf2017.scss
+++ b/_assets/css/_sf2017.scss
@@ -50,7 +50,9 @@
     content: '';
     background: url(asset_path("media/27039658100_575e78dbb2_o.jpg")) no-repeat center 30% $black;
     background-size: cover;
-    background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     filter: brightness(60%);
     position: absolute;
     top: 0;
